# a4

./: .gitignore  .gitmodules  .travis.yml  .valgrind-other.supp  .valgrind-python.supp  .valgrind-root-other.supp  .valgrind_suppression  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.old  README  README.md  WISHLIST  a4env.sh.am  autogen.sh  configure.ac  distcheck.sh  get_miniboost.sh  get_protobuf.sh  get_snappy.sh  make_miniboost.sh  protobuf.make.py  protobuf.make.sh  this_a4.sh.ac  this_a4.sh.am  waf  wscript
a4atlas/: Makefile.am  configure.ac  periods.yaml  protobuf.am  protobuf.make
a4atlas/D3PDMakerA4/: .gitignore
a4atlas/D3PDMakerA4/cmt/: requirements
a4atlas/D3PDMakerA4/ntups/: listd3pds.py
a4atlas/D3PDMakerA4/share/: a4_generate_proto_jobOptions.py
a4atlas/D3PDMakerA4/src/: A4D3PD.cxx  A4D3PD.h  A4ProtoDumpD3PD.h  IA4D3PD.h
a4atlas/D3PDMakerA4/src/components/: D3PDMakerA4_entries.cxx
a4atlas/a4maker/python/: A4DumpAlg.py
a4atlas/a4maker/python/Generator/: Proto.py
a4atlas/a4maker/share/: generate_proto.py  override_d3pd.py
a4atlas/a4maker/src/: A4D3PDSvc.cxx  A4DumpAlg.h
a4atlas/athena/: aod2a4.py  gangatask.py  run.py
a4atlas/athena/A4Dumper/cmt/: requirements
a4atlas/athena/A4Dumper/python/: A4DumperAlg.py  aod2a4.py  pydumpa4.py
a4atlas/athena/A4Dumper/share/: A4Dumper_jobOptions.py
a4atlas/athena/A4Dumper/src/: A4DumperAlg.cxx  A4DumperAlg.h  A4DumperSvc.cxx  A4DumperSvc.h
a4atlas/proto/a4/atlas/: DataQuality.proto  Electron.proto  Event.proto  EventMetaData.proto  EventStreamInfo.proto  Isolation.proto  Jet.proto  Muon.proto  Photon.proto  Physics.proto  ShowerShape.proto  (+2 more)
a4atlas/python/: xml2grl
a4atlas/src/: a4reweight.cpp  grl.cpp  test_grl.cpp
a4atlas/src/a4/: grl.h
a4atlas/src/apps/: a4reweight.cpp
a4atlas/src/tests/: install_a4copy.sh  install_a4reweight.sh  test_a4copy.sh  test_a4reweight.sh  test_grl.cpp
a4hist/: Makefile.am  configure.ac  gtest  protobuf.am  protobuf.make
a4hist/m4/: a4.m4  cpp0x.m4  protobuf.m4
a4hist/proto/: Cutflow.proto  Histograms.proto
a4hist/src/: a4merge.cpp  axis.cpp  cutflow.cpp  dump_results.cpp  h1.cpp  h2.cpp  h3.cpp  histogram.cpp  merge_results.cpp  test_hist.cpp
a4hist/src/a4/: alorentzvector.h  axis.h  cutflow.h  h1.h  h2.h  histogram.h
a4hist/src/apps/: a4merge.cpp
a4hist/src/gtests/: test_hist.cpp
a4io/: Makefile.am  configure.ac  protobuf.am  protobuf.make  protobuf.make.sh  this_a4.sh.ac
a4io/m4/: am_override.m4  miniboost.m4  this_a4.sh.ac
a4io/proto/: A4.proto  A4Stream.proto  Histograms.proto  MetadataExtension.proto  Results.proto
a4io/python/: a4dump.py  a4info.py  test_pyrw
a4io/python/a4/: A4Stream.py  __init__.py  proto_class_pool.py  snappy_stream.py  stream.py  zlib_stream.py
a4io/scripts/: a4diff
a4io/src/: Makefile.am  application.cpp  axis.cpp  base_compressed_streams.h  compressed_stream.cpp  compressed_stream.h  copy.cpp  copy.h  debug.cpp  dynamic_message.cpp  dynamic_message.h  exceptions.cpp  gzip_stream.cpp  gzip_stream.h  h1.cpp  h2.cpp  input.cpp  input_stream.cpp  input_stream_a4_impl.cpp  input_stream_a4_impl.h  input_stream_impl.cpp  input_stream_impl.h  linkage_check.cpp  linkage_check_darwin.h  linkage_check_linux.h  lz4.cpp  message.cpp  objectstore.cpp  output.cpp  output_stream.cpp  processor.cc  proto_class_pool.cpp  proto_class_pool.h  reader.cpp  register.cpp  remote_io.cpp  remote_io.h  results.cc  results.cpp  rwtest.cpp  (+23 more)
a4io/src/a4/: a4io.h  application.h  cutflow.h  debug.h  dynamic_message.h  exceptions.h  h1.h  input.h  input_stream.h  input_stream_impl.h  message.h  object_store.h  objectstore.h  objectstore_impl.h  output.h  output_stream.h  processor.h  reader.h  reader_impl.h  register.h  result_type.h  results.h  stream.h  streamable.h  string.h  string_impl.h  types.h  writer.h  writer_impl.h
a4io/src/apps/: a4dump.cpp  a4info  a4info.cpp
a4io/src/gtests/: test_a4message.cpp  test_extension.cpp  test_merge_metadata.cpp  test_remote_io.cpp  test_rw.cpp
a4io/src/rfio/: test_rfio.cpp
a4io/src/tests/: bigwrite.cpp  install_rw.sh  installcheck.sh  read.cpp  read_nomd.cpp  test_io.cpp  test_merge_metadata.cpp  test_read.cpp  test_read_nomd.cpp  test_remote_io.cpp  test_rw.cpp  test_rw.sh  test_thread.cpp  write_bw.cpp  write_fw.cpp  write_nomd_bw.cpp  write_nomd_fw.cpp
a4process/: Makefile.am  configure.ac  protobuf.am  test_app.ini
a4process/m4/: a4.ac  a4.am  miniboost.m4
a4process/proto/: A4Key.proto
a4process/python/: atfile.py  pmbs  pmbs.py  poorcache  poorcache.py  poorprocess  poorprocess.py
a4process/src/: a4process.cpp  application.cpp  cpu_info.h  driver.cpp  hash_lookup.cpp  mockup.cpp  object_store.cpp  objectstore.cpp  processor.cpp  results.cpp  storable.cpp  test_app.cpp  test_app.sh  test_hashlookup.cpp  test_hashlookup_speed.cpp  test_histo.cpp  test_objstore.cpp  test_objstore_speed.cpp  test_results.cpp  test_storable.cpp  worker.cpp
a4process/src/a4/: a4process.h  appdrivers.h  application.h  cpu_info.h  driver.h  hash_lookup.h  hash_lookup_impl.h  interfaces.h  object_store.h  object_store_impl.h  objectstore.h  objectstore_impl.h  processor.h  results.h  results_processor.h  storable.h  utility.h  worker.h
a4process/src/apps/: a4copy.cpp
a4process/src/gtests/: metadata_merging.cpp
a4process/src/tests/: app.cpp  hashlookup.cpp  histo.cpp  metadata_merging.cpp  objstore.cpp  objstore_speed.cpp  results.cpp  storable.cpp
a4root/: Makefile  Makefile.am  configure.ac  protobuf.am
a4root/proto/: BunchConfigID.proto  D3PDObject2.proto  EFElectron.proto  EmTauROI.proto  Event.proto  Event.proto-old  Metadata.proto  Photon.proto  RootExtension.proto  TrackParticle.proto  TrigEMCluster.proto  TrigInDetTrack.proto  TrigPhoton.proto
a4root/proto/test/: Event.proto
a4root/src/: a4results2root.cpp  agnostic_dump.cpp  analysis.cpp  convertable_types.cc  copy_chain.cpp  message_factory.cpp  root2a4.cpp  rwtest.cpp  test_rw.cpp
a4root/src/a42root/: main.cpp
a4root/src/apps/: a4results2root.cpp
a4root/src/root2a4/: common.h  main.cpp  message_factory.cpp
(+456 files in other folders)
