AC_PREREQ(2.59)
AC_CONFIG_AUX_DIR([build-aux])
AC_INIT([a4atlas], [0.1], [johannes.ebke@physik.uni-muenchen.de])
AM_INIT_AUTOMAKE([1.9 foreign subdir-objects -Wall -Werror])
m4_include([m4/a4.ac])
A4_REQUIRE([a4io], [a4io.h])
A4_REQUIRE([a4process], [a4process.h])
AC_CONFIG_SRCDIR(src/test_grl.cpp)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
